--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,45 @@
-<img src="/logo.svg" width="100" />
-<h1>Static website</h1>
-<ul>
-  <li><a href="/link-1">Link 1</a></li>
-  <li><a href="/link-2">Link 2</a></li>
-  <li><a href="/link-3">Link 3</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+
+    <title>Create Room</title>
+</head>
+<body>
+
+    <div class="container mt-3 mt-sm-5">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <form id="form" method="post">
+
+              <div class="form-group">
+                <label class="form-control-label" for="name">Room Name</label>
+                <input id="name" name="name" class="form-control" type="text">
+
+              </div>
+              
+              <div class="form-group">
+                <label class="form-control-label" for="number">Room Number</label>
+                <input id="number" name="number" class="form-control" type="text">
+
+              </div>
+
+              <div class="form-group">
+                <label class="form-control-label" for="name">Room Occupant</label>
+                <input id="name" name="name" class="form-control" type="text">
+
+              </div>
+              
+              <button class="btn btn-primary">Create Room</button>
+
+            </form>
+          </div>
+        </div>
+      </div>
+      <script src="index.js"></script>
+</body>
+</html>
